fixed the images being too big

--- a/Phantom by HTML5UP/assets/css/main.css
+++ b/Phantom by HTML5UP/assets/css/main.css
@@ -2317,7 +2317,7 @@ input, select, textarea {
 		border: 0;
 		display: inline-block;
 		position: relative;
-		max-height: 250px;
+		max-height: 350px;
 	}
 
 		.image img {
